opam-version: "2.0"
maintainer: "AyOK-Code"
authors: [
  "AyOK-Code"
]
synopsis: "Search and process data from the OSCN dockets website"
description: """
Search and process data from the OSCN dockets website.
"""
license: "MIT"
tags: []
homepage: "https://github.com/AyOK-Code/oscn-dockets-processor"
doc: "https://github.com/AyOK-Code/oscn-dockets-processor"
bug-reports: "https://github.com/AyOK-Code/oscn-dockets-processor/issues"
depends: [
  "ocaml" {= "4.10.0"}
  "dune" {build & >= "1.9.0"}

  "alcotest-lwt" { = "1.1.0" }

  "core" { >= "v0.13.0" & < "v0.14.0" }
  "re2" { >= "v0.13.0" & < "v0.14.0" }
  "lwt" { >= "5.2.0" & < "6.0.0" }
  "lwt_ppx" { >= "2.0.1" & < "3.0.0" }
  "utop"

  "lambdasoup" { = "0.7.1" }

  "cohttp" { = "2.5.1" }
  "cohttp-lwt-unix" { = "2.5.1" }
  "tls" { >= "0.12.3" }

  "ppx_deriving" { >= "4.4.1" & < "5.0.0" }
  "ppx_deriving_yojson" { >= "3.5.2" & < "4.0.0" }
  "yojson" { >= "1.7.0" & < "2.0.0" }
]
