(library
  (name liboscn)
  (libraries
    libutils

    core_kernel
    cohttp
    cohttp-lwt-unix
    lwt
    lwt.unix
    lambdasoup
    ppx_deriving_yojson.runtime
    re2
  )
  (preprocess (pps
    lwt_ppx
    ppx_deriving_yojson
  ))
  (ocamlopt_flags -O3 -unbox-closures))

(env
  (dev
    (flags (:standard -warn-error -A))))
